5/5.7/4.1/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong
  namespace: exp1
  labels:
    run: pingpong
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: pingpong
---
apiVersion: v1
kind: Service
metadata:
  name: log-output2-1
  namespace: exp1
  labels:
    run: log-output2-1
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: log-output2-1
